<resources>
    <string name="app_name">GardenTour</string>
    <string name="rose">rose</string>
    <string name="various_colors">Various colors</string>
    <string name="buttercup">buttercup</string>
    <string name="daisy">daisy</string>
    <string name="foxglove">foxglove</string>
    <string name="pansy">pansy</string>
    <string name="marigold">marigold</string>
    <string name="yellow">Yellow</string>
    <string name="pink">Pink</string>
    <string name="white">White</string>
    <string name="orange">Orange</string>
    <string name="green">Green</string>
    <string name="carrot">carrot</string>
    <string name="carrot_use">Putting in salads and dinners</string>
    <string name="beetroot">beetroot</string>
    <string name="purple">Purple</string>
    <string name="beetroot_use">Pickling or putting in salads</string>
    <string name="cabbage">cabbage</string>
    <string name="cabbage_use">A healthy side dish</string>
    <string name="chilli">chilli</string>
    <string name="chilli_color">Red or green</string>
    <string name="chilli_use">Making a dish spicy</string>
    <string name="onion">onion</string>
    <string name="onion_color">White or red</string>
    <string name="onion_use">A base flavour for many dishes</string>
    <string name="aubergine">aubergine</string>
    <string name="aubergine_use">Vegetarian lasagne</string>
    <string name="bumblebee">bumblebee</string>
    <string name="bumblebee_color">Black and yellow</string>
    <string name="bumblebee_use">Making honey and pollination</string>
    <string name="ladybird">ladybird</string>
    <string name="ladybird_color">Red and black</string>
    <string name="ladybird_use">Eating greenflies on plants</string>
    <string name="snail">snail</string>
    <string name="brown">Brown</string>
    <string name="snail_use">Providing a tasty meal for birds</string>
    <string name="worm">worm</string>
    <string name="worm_use">Improving the soil</string>
    <string name="butterfly">butterfly</string>
    <string name="butterfly_use">Looking pretty and polination</string>
    <string name="greenfly">greenfly</string>
    <string name="greenfly_use">Destroying plants!</string>
    <string name="watering_can">watering can</string>
    <string name="medium">Medium</string>
    <string name="watering_can_use">Watering the flowers</string>
    <string name="yes">Yes</string>
    <string name="big">Big</string>
    <string name="rake">rake</string>
    <string name="rake_use">Sweeping up leaves</string>
    <string name="no">No</string>
    <string name="fork">fork</string>
    <string name="small">Small</string>
    <string name="fork_use">Mixing the soil</string>
    <string name="trowel">trowel</string>
    <string name="trowel_use">Digging holes in the soil</string>
    <string name="hose">hose</string>
    <string name="hose_use">Watering the garden</string>
    <string name="pruner">pruner</string>
    <string name="pruner_use">Chopping back overgrown plants</string>
    <string name="color">Color:</string>
    <string name="number_of_petals">Number of petals:</string>
    <string name="is_good_for">Is Good For:</string>
    <string name="size">Size:</string>
    <string name="child_friendly">Child friendly?</string>


</resources>
