<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        style="@style/cardView"
        card_view:cardCornerRadius="@dimen/smallMargin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical">

            <ImageView
                android:id="@+id/object_image"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:padding="4dp"
                android:src="@drawable/aubergine" />

            <LinearLayout
                android:id="@+id/first_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:layout_toRightOf="@id/object_image"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/object_name"
                    style="@style/nameText"
                    tools:text="Object Name" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/second_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/first_line"
                android:layout_toRightOf="@id/object_image"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/color_tag"
                    style="@style/propertyText"
                    android:text="@string/color"/>

                <TextView
                    android:id="@+id/object_color"
                    style="@style/contentText"
                    tools:text="Object Color" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/third_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/second_line"
                android:layout_toRightOf="@id/object_image"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/petals_tag"
                    style="@style/propertyText"
                    android:text="@string/number_of_petals"/>

                <TextView
                    android:id="@+id/number_of_petals"
                    style="@style/contentText"
                    tools:text="Number Of Petals" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fourth_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/third_line"
                android:layout_toRightOf="@id/object_image"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/size_tag"
                    style="@style/propertyText"
                    android:text="@string/size" />

                <TextView
                    android:id="@+id/size"
                    style="@style/contentText"
                    tools:text="Size" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/fifth_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fourth_line"
                android:layout_toRightOf="@id/object_image"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/good_for_tag"
                    style="@style/propertyText"
                    android:text="@string/is_good_for"/>

                <TextView
                    android:id="@+id/is_good_for"
                    style="@style/contentText"
                    tools:text="Is Good For" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/sixth_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/fifth_line"
                android:layout_toRightOf="@id/object_image"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/child_friendly_tag"
                    style="@style/propertyText"
                    android:text="@string/child_friendly" />

                <TextView
                    android:id="@+id/is_child_friendly"
                    style="@style/contentText"
                    tools:text="Child friendly?" />

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>